objects/PC_Address__c.object
<CustomObject>
    <description>PatientConnect custom object used to track addresses of all types of participants (accounts), including the patient</description>
    <fields>
        <fullName>ACLS_Address_Codes__c</fullName>
        <label>Address Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ACLS_Verification_Status__c</fullName>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Override</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Zip_Code_Extension__c</fullName>
        <label>Zip Code Extension</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Account__c</fullName>
        <description>The account to which the address is associated with.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PC_Address_1__c</fullName>
        <description>Line 1 of the address.</description>
        <label>Address 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Address_2__c</fullName>
        <description>Line 2 of the address.</description>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Address_3__c</fullName>
        <description>Line 3 of the address.</description>
        <label>Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Address_Description__c</fullName>
        <description>The address type such as Business or Home.</description>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_City__c</fullName>
        <description>The city address.</description>
        <label>City</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Complete_Address__c</fullName>
        <description>The full address populated from the individual address lines.</description>
        <formula>IF(ISBLANK(PC_Address_1__c ),  &apos;&apos; ,  PC_Address_1__c) +
IF(ISBLANK(PC_City__c ), &apos;&apos; , &apos;, &apos; + PC_City__c )+
IF(ISBLANK(TEXT(PC_State__c)  ) , &apos;&apos; , &apos;, &apos; + TEXT(PC_State__c))+
IF(ISBLANK(PC_Zip_Code__c) ,&apos;&apos; , &apos;, &apos; + PC_Zip_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Country__c</fullName>
        <description>The country associated with the address.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_End_Date__c</fullName>
        <description>The date when the address was last active.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Primary_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Primary Address related to the account. This address reflects on the Account and cases.</description>
        <inlineHelpText>Defines the primary address of the associated account</inlineHelpText>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Start_Date__c</fullName>
        <description>The address start date.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_State__c</fullName>
        <description>The state associated with the address. The state is controlled by the country.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PC_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FM</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Status__c</fullName>
        <description>Status that indicates if the address is active or not.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Zip_Code__c</fullName>
        <description>The zip code associated with the address.</description>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Account__c</columns>
        <columns>PC_Complete_Address__c</columns>
        <columns>PC_Primary_Address__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{000000}</displayFormat>
        <label>Address</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Validate_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
AND(NOT(ISBLANK(PC_End_Date__c)), PC_End_Date__c &lt; PC_Start_Date__c),
AND( ISPICKVAL(PC_Status__c, &apos;Inactive&apos;), ISBLANK(PC_End_Date__c))
)</errorConditionFormula>
        <errorMessage>End Date cannot predate Start Date
End Date cannot be blank if Status = Inactive</errorMessage>
    </validationRules>
</CustomObject>